<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="ekkart">Ekkart</string>
    <string name="register_success">You are registered successfully</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="cart">Cart</string>
    <string name="catch1">40% of on our new deals</string>
    <string name="catch2">Get exiting new prizes</string>
    <string name="catch3">And people do that.</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
</resources>