<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Register"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_margin="16dp"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firtnamelayout"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/remargin"
                android:layout_margin="@dimen/remargin"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstnamet"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/remargin"
                android:layout_margin="@dimen/remargin"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastnameet"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/LoginTextInputInnerFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/remargin"
                android:layout_margin="@dimen/remargin"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/remargin"
                android:layout_margin="@dimen/remargin"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpasslayout"
                style="@style/LoginTextInputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/remargin"
                app:boxStrokeColor="@color/yellow"
                app:hintTextColor="@color/yellow"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpass"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


          <Button
              android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              android:layout_margin="16dp"
            android:layout_marginHorizontal="@dimen/remargin"
            android:background="@color/yellow"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textStyle="bold"
           />


        </LinearLayout>
    </ScrollView>
</LinearLayout>